--- a/style.css
+++ b/style.css
@@ -15,7 +15,12 @@ body {
 
 .audio, .video {
     display: flex;
-    gap:20px;
+    justify-content: space-around;
+    max-width: 200px;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 10px;
+    align-items: center;
 }
 
 .nowPlayingVideo {
